--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+html, body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
